output.txt
src\harcoded.java:8: error: class hardcoded is public, should be declared in a file named hardcoded.java
public class hardcoded {
       ^
src\hardcoded.java:8: error: duplicate class: src.hardcoded
public class hardcoded {
       ^
2 errors
